# starword-java

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  pom.xml
jni/: star-keyword-jni.cc  starword-jni.cc
scripts/: jni-build.bat  jni-build.sh
src/main/cpp/: star-json-jni.cc  star-json-jni.cpp
src/main/cpp/core/: jwbase.cpp  jwbase.h  star_json.cc  star_json.cpp  star_json.h  trie_tree.cc  trie_tree.cpp  trie_tree.h
src/main/java/org/vxwo/free/starkeyword/: StarJsonEngine.java  StarOptions.java  StarTextEngine.java
src/main/java/org/vxwo/free/starkeyword/internal/: BaseNativeObject.java  NativeCleanuper.java  NativeEngine.java  NativeLoader.java
src/main/java/org/vxwo/free/starword/: StarJsonEngine.java  StarJsonOptions.java  StarMethod.java  StarOptions.java  StarStrategy.java  StarTextEngine.java  StarTextOptions.java  StarUtils.java
src/main/java/org/vxwo/free/starword/internal/: BaseNativeObject.java  NativeCleanuper.java  NativeEngine.java  NativeLoader.java
src/main/java/org/vxwo/jni/starjson/: StarJsonEngine.java
src/main/java/org/vxwo/jni/starjson/internal/: NativeCleanuper.java  NativeEngine.java  NativeLoader.java
src/main/java/org/vxwo/starkeyword/: StarJsonEngine.java  StarTextEngine.java
src/main/java/org/vxwo/starkeyword/internal/: BaseNativeObject.java  NativeCleanuper.java  NativeEngine.java  NativeLoader.java
src/main/resources/native/darwin-aarch64/: libstarword-java.dylib
src/main/resources/native/darwin-x86_64/: libstarword-java.dylib
src/native/: star-json-jni.cc  star-keyword-jni.cc  starword-jni.cc
src/test/java/tester/: MemoryUsageTest.java  StarJsonEngineTest.java  StarTextEngineTest.java  StarUtilsTest.java
